@@ -1,0 +1,28 @@
+<?php
+
+/**
+ * wood_theme.php
+ *    Name:   Wood
+ *    Author: Pavel Spatny
+ *    Date:   2004/11/16
+ */
+
+global $color;
+$color[0]   = '#e4dab0'; //       addit. text background
+$color[1]   = '#900000'; //        ??
+$color[2]   = '#C00000'; //        warnings
+$color[3]   = '#e4dab0'; //       Left Bar Background
+$color[4]   = '#f4f0d0'; //       Normal Background
+$color[5]   = '#dac490'; //       Table Headers
+$color[6]   = '#102030'; //       Text on left bar
+$color[7]   = '#a06030'; //       Links
+$color[8]   = '#602000'; //       Normal text
+$color[9]   = '#dac490'; //       Darker version of #0
+$color[10]  = '#cab488'; //       Darker version of #9
+$color[11]  = '#a06030'; //       Special Folders color
+$color[12]  = '#e4dab0'; //       odd message background
+$color[13]  = '#ffffff'; //
+$color[14]  = '#ffffff'; //
+$color[15]  = '#D0D0D0'; //       Unselectable folders
+
+?>
